objects/POC_Request_Solution_and_Module_Map__c/POC_Request_Solution_and_Module_Map__c.object-meta.xml
<CustomObject>
    <description>Contains a cross reference from fields on the POC Request to their corresponding Products and/or Modules</description>
    <label>POC Request Solution and Module Map</label>
    <nameField>
        <label>POC Request Solution and Module Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Request Solution and Module Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>