objects/POC_Request_Solution_and_Module_Map__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Module record. Jira ticket SS-12115</description>
    <inlineHelpText>Lookup to the Module record</inlineHelpText>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>POC Request Solution and Module Map</relationshipLabel>
    <relationshipName>POC_Request_Solution_and_Module_Map</relationshipName>
    <type>Lookup</type>
</CustomField>