objects/POC_Request_Solution_and_Module_Map__c/fields/POC_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>POC_Field_Label__c</fullName>
    <description>The API name of the field on the POC Request form. This will be used for lookup in Apex</description>
    <inlineHelpText>The API name of the field on the POC Request form. This will be used for lookup in Apex</inlineHelpText>
    <label>POC Field Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>