objects/POC_Request_Solution_and_Module_Map__c/fields/Product_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Product_Cloud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cloud product record. Jira ticket SS-12115</description>
    <inlineHelpText>Lookup to the Cloud product record</inlineHelpText>
    <label>Product - Cloud</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>POC Request Solution and Module Map</relationshipLabel>
    <relationshipName>POC_Request_Solution_and_Module_Map</relationshipName>
    <type>Lookup</type>
</CustomField>