objects/POC_Request_Solution_and_Module_Map__c/fields/Product_On_Prem__c.field-meta.xml
<CustomField>
    <fullName>Product_On_Prem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the On-Prem product record. Jira ticket SS-12115</description>
    <inlineHelpText>Lookup to the On-Prem product record</inlineHelpText>
    <label>Product - On-Prem</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>POC Request Solution and Module Map (Product - On-Prem)</relationshipLabel>
    <relationshipName>POC_Request_Solution_and_Module_Map1</relationshipName>
    <type>Lookup</type>
</CustomField>